--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,19 @@ theme: jekyll-theme-leap-day
 title: my web
 languages: ["en", "ja"]
 google_analytics: UA-168023643-1
+
+source: .
+layouts_dir: _layouts
+data_dir: _data # なぜかこのディレクトリをいったん指定しないと _posts が動かなかった
+includes_dir: _includes
+show_excerpts: true # 投稿の中身を展開する
+paginate: 5
+paginate_path: "/blog/page:num/"
+# permalink: date # 不明
+# collections_dir: .
+collections:
+  posts: 
+    output: true
+plugins:
+  - jekyll-paginate
+
