--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,6 +7,7 @@ source: .
 layouts_dir: _layouts
 data_dir: _data # なぜかこのディレクトリをいったん指定しないと _posts が動かなかった
 includes_dir: _includes
+permalink: pretty #拡張子を外す
 show_excerpts: true # 投稿の中身を展開する
 paginate: 5
 paginate_path: "/blog/page:num/"
